--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,3 +1,6 @@
 <p><%= @restaurant.name %></p>
 <p><%= @restaurant.description %></p>
-<p><%@reviews = Review.all %></p>
+<%@reviews = Review.find_by_sql("SELECT * FROM reviews WHERE restaurant_id = #{@restaurant.id}")%>
+<%@reviews.each do |review|%>
+<p><%=review.thoughts%></p>
+<%end%>
